public/css/main.css
body, html {
	margin: 0;
	padding: 0;
}
#header {
	width: 100%;
	padding: 0;
	margin: 0;
	border-bottom: 1px dashed #cc0000;
}
#header div {
	margin: -40px auto -28px auto;
	letter-spacing: 5px;
	font-size: 113px;
	padding: 0;
	width: 720px;
}
#header a{
	text-decoration: none;
}
#content {
	margin: 0 auto;
	font-family: 'Baskerville', Georgia, Times, serif;
	font-size: 20px;
	line-height: 30px;
	padding: 15px;
	width: 720px;
}
header, footer, section, article {
	display: block;
	text-align: justify;
}
#by {
	font-style: italic;
	margin-right: 5px;
	font-size: 28px;
}
#caption {
	position: absolute;
	font-size: 24px;
	margin: -135px 0 0 70px;
}
.date {
	font-style: italic;
	float: right;
	line-height: 43px;
	margin-right: 0;
}
a {
	color: #cc0000;
}
h1 a {
	color: black;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
body > header > h1 {
	border-left: 30px solid black;
	padding-left: 30px;
	font-size: 201px;
	margin: 100px 0 15px 0;
	font-weight: normal;
}
.post header {
	margin-bottom: 10px;
}
.post .body p:first-child {
	margin-top: 0;
}
.post .body p:last-child {
	margin-bottom: 0;
}
.post {
	margin-bottom: 30px;
}
.post:last-child {
	margin-bottom: 10px;
}
.post p {
	margin: 10px 0;
}
.post .more {
	margin-top: -10px;
	margin-right: 0;
	font-style: italic;
	text-align: right;
}
.more a {
	text-decoration: none;
}
.more a:hover { 
	text-decoration: underline 
}
body > header {
	display: block;
	padding-top: 30px;
	line-height: 180px;
	margin-bottom: 20px;
}
h1, h2, h3, h4 {
	display: inline;
	margin: 0;
}
code, .gist {
	font-family: 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono;
	font-size:small;
	line-height:normal;
}
pre {
	padding: 0px 10px;
}
blockquote {
	font-style: italic;
}
#content > footer {
	text-align: left;
	margin-left: 10px;
	font-style: italic;
	font-size: 16px;
	color: #888;
}
.slide-out-div { 
	padding: 5px 20px; 
	width: 110; 
	background: #fff; 
	border: 1px solid #cc0000; 
}
#about-me img { 
	vertical-align: middle;
	margin: 5px 5px;
	border: 0;
}
#about-me a { 
	text-decoration:none;
	color: black;
}
#about-me li {
	margin-left: 0;
}

#about-me {
	list-style-type: none;
}

